_sass/components/_custom.scss
// Typography ------------- //

$font-body: $font-serif;
$font-headings: $font-sans;

html {
  font-family: $font-body;
}

h1,
h2,
h3,
h4,
h5,
h6,
.usa-logo,
.usa-banner {
  font-family: $font-headings;
}

.font-small {
  font-size: $small-font-size;
}

.h4 {
  font-size: $h4-font-size;
}

.usa-content {
  p {
    &:not(.usa-font-lead) {
      max-width: 66ch;
    }
  }
}

// Layout ------------- //

// Single column page
.page-single-column {
  .usa-content {
    max-width: 66ch;
  }
}

// Add top + bottom padding to main's
body:not(.page-home) {
  main {
    @include padding(6rem null);
  }
}

.background-medium {
  background-color: $color-brand-medium;
}

.background-dark {
  background-color: $color-gray-dark;
}

.background-medium,
.background-dark {
  color: $color-white;
  -webkit-font-smoothing: antialiased;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p {
    color: $color-white;
  }

  .section-heading {
    color: $color-primary-alt;
    letter-spacing: 0.5px;
  }

  h2 {
    letter-spacing: 0.5px;
  }

  a {
    color: $color-white;

    &:hover {
      color: $color-gray-light;

      path {
        fill: $color-gray-light;
      }
    }
  }

  input,
  textarea,
  select {
    border-color: $color-white;
  }
}

.background-light {
  background-color: $color-brand-light;

  .usa-button {
    background-color: $color-brand-dark;
  }
}

// Navigation ------------- //

.usa-header-basic {
  .usa-navbar {
    @include media($nav-width) {
      width: 370px;
    }
  }
}

.usa-navbar {
  @include media($nav-width) {
    height: 85px;
    margin-bottom: 8px;
  }
}


// Add correct current nav link style
.usa-nav {
  @include media($nav-width) {
    padding-top: 3rem;
  }

  a {
    &.usa-current {
      @include media($nav-width) {
        border-left: 0;
      }
    }
  }

  .usa-current {
    > span {
      color: $color-base;

      @include media($nav-width) {
        @include nav-border;
        border-bottom-color: $color-brand;
      }
    }
  }
}

.usa-nav-link {
  &:hover {
    span {
      border-bottom-color: $color-brand;
      color: $color-base;
    }
  }
}

// Fix navigation close button layout on mobile
.usa-nav-primary {
  display: inline-block;
}


// Hero feature ------------- //

.usa-hero-callout {
  h2 {
    color: $color-white;
  }

  .usa-button {
    background-color: $color-white;
    color: $color-primary-darkest;
    font-size: inherit;

    &:hover {
      background-color: $color-brand;
      color: $color-primary-darkest;
    }
  }

  @include media($small-screen) {
    max-width: 350px;
  }
}


// Billboard ------------- //

.billboard {
  .usa-media_block-img {
    display: none;
    margin-right: 26px;
    margin-top: 25px;

    @include media($medium-screen) {
      display: block;
    }
  }

  .usa-button {
    margin-top: 0;
  }
}

.billboard-message {
  color: #81848B;
  font-family: $font-sans;
  font-size: 38px;
  font-weight: $font-bold;
  max-width: 656px;

  p {
    line-height: 1.3;
    margin-top: 0;
  }

  em {
    color: $color-base;
    font-style: normal;
  }
}

.billboard-img {
  @include media($medium-screen) {
    @include span-columns(2);
  }
}

.icon-gears {
  @include media($medium-screen) {
    display: block;
    float: right;
    width: 100%;
  }
}


// Contact ------------- //

.contact {
  h2 {
    margin-top: 0;
  }

  .usa-input-buttons-inline {
    input {
      margin-bottom: 0;
    }
  }
}

.icon-twitter {
  margin-right: 10px;
}

.usa-footer-logo-img {
  @include media($medium-screen) {
    float: right;
    margin-top: -60px;
  }
}

// Privacy policy

.contact-form {
  .usa-button {
    @include media($medium-screen) {
      margin-bottom: 0;
      margin-top: 0.2em;
    }

    &:hover {
      background-color: darken($color-brand-dark, 10%);
    }
  }
}

.contact-input {
  @include media($medium-screen) {
    float: left;
    margin-right: 10px;
    width: calc(100% - 186px);
  }
}

.privacy-policy {
  @include media($medium-screen) {
    border-left: 1px solid $color-brand-tint;
    padding-bottom: 3rem;
    padding-left: 3rem;
  }

  * {
    color: $color-brand-dark;
  }
}

.icon-privacy {
  margin-top: 3rem;
}


// Project page ------------- //

.page--banner {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  min-height: 300px;
  width: 100%;
}


// Project card ------------- //

.project-container {
  @include media($medium-screen) {
    display: flex;
    flex-wrap: wrap;
  }
}

// Sets a height on projects so they're the same height and don't break the grid
.project--card {
  box-shadow: 0 0 0 1px $color-gray-lighter;
  display: block;
  margin-bottom: 3rem;
  text-decoration: none;

  @include media($medium-screen) {
    display: flex;
    flex-direction: column;
    min-height: 450px;
  }

  &:nth-child(3n) {
    margin-right: 0;
  }

  &:hover {
    box-shadow: 0 0 0 1px $color-primary;
  }

  &:active {
    box-shadow: $focus-shadow;
  }
}

.project--banner {
  @include margin(3rem);

  @include media($medium-screen) {
    flex: 1 0 auto;
  }
}

.project--image {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  min-height: 200px;
  width: 100%;
}

.project--description.project--description {
  color: $color-primary;
  margin-top: 0;
}

.project--summary {
  color: $color-base;
  margin-bottom: 0;
}

.project--read {
  @include margin(0 3rem null 3rem);
  color: $color-primary;
  font-size: $small-font-size;
  font-weight: bold;
  padding-bottom: 3rem;

  svg {
    display: inline-block;
    height: 1.2rem;
    margin-bottom: -1px;
    width: 1.2rem;
    margin-left: 4px;
  }
}

.page-project-single {
  aside {
    @include media($medium-screen) {
      width: 250px;
    }
  }

  .usa-content {
    @include media($medium-screen) {
      width: calc(100% - 250px - 4.82916%);
    }
  }
}

// Team ------------- //

.page-team {
  .usa-graphic_list {
    .usa-media_block {
      margin-bottom: 6rem;

      &:nth-child(2n) {
        margin-right: 0;
      }

      &:nth-last-child(-n+2) {
        margin-bottom: 0;
      }
    }

    h3 {
      margin-top: 0;
    }
  }
}

.team-image {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  clip-path: circle(62px at center);
  height: 124px;
  width: 124px;
}

.page-team-single {
  .team-image {
    clip-path: circle(150px at center);
    height: 300px;
    width: 300px;
  }
}

// Filter ------------- //
.filter {

}

.filter-category {
  @include media($medium-screen) {
    display: inline-block;
    width: 30%;
  }
}

